fix the nav-bar on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,41 +119,47 @@ header p {
 }
 
   
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    border-radius: 5px;
-    min-width: 100px;
-    text-align: center;
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 6px;
-    text-decoration: none;
-    display: block;
-    border-radius: 5px;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .button {background-color: rgba(211,211,211, 80%);}
-  
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+position: relative;
+display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+border-radius: 5px;
+min-width: 100px;
+text-align: center;
+z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+color: black;
+padding: 12px 6px;
+text-decoration: none;
+display: block;
+border-radius: 5px;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Change color of dropdown links on click */
+.dropdown-content a:active {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Show the dropdown menu on click */
+.dropdown:active .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .button {background-color: rgba(211,211,211, 80%);}
+
 
 
 /* Projects
@@ -287,7 +293,7 @@ footer {
 
 @media screen and (max-width: 450px) { /* applies to smart phones */
     .nav-bar .button {
-        margin-right: 10px;
+        margin-right: 5px;
         font-size: smaller;
     }
 
